--- a/css/menu-styles/highlight-styles.css
+++ b/css/menu-styles/highlight-styles.css
@@ -123,8 +123,3 @@
     height: 100%;
   }
 }
-
-/* Mega Menu Styles */
-.ucb-mega-menu {
-  background-color: #EEEEEE;
-}
