--- a/css/menu-styles/ivory-styles.css
+++ b/css/menu-styles/ivory-styles.css
@@ -245,8 +245,3 @@
     height: 100%;
   }
 }
-
-/* Mega Menu Styles */
-.ucb-mega-menu {
-  background-color: #fff;
-}
