--- a/css/menu-styles/minimal-styles.css
+++ b/css/menu-styles/minimal-styles.css
@@ -86,8 +86,3 @@
     height: 100%;
   }
 }
-
-/* Mega Menu Styles */
-.ucb-mega-menu {
-  background-color: #fff;
-}
